GTNPORTAL-3048: fix spacing issue between the menu elements

--- a/mobile-integration/portlets/header/src/main/webapp/css/ResponsiveMenuStylesheet.css
+++ b/mobile-integration/portlets/header/src/main/webapp/css/ResponsiveMenuStylesheet.css
@@ -104,6 +104,7 @@
     margin-top: 0;
     margin-bottom: 0;
     margin-right: 0;
+    margin-left: 0.5em;
 }
 
 .gtnResponsiveMenu > .menu > .menucategory:hover > .menutoggle > .caret,
